@@ -1,5 +1,9 @@
 === SVN
 
+* Removed examples from sequel core.
+
+* Additional specs. We're now at 100% coverage.
+
 * Refactored hooks code. Hooks are now inheritable, and can be defined by supplying a block or a method name, or by overriding the hook instance method. Hook chains can now be broken by returning false (#111, #112).
 
 === 0.1 (2007-12-30)
